--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "1.0.0",
   "description": "final project",
   "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/colinkron/connect_four"
   "dependencies": {
-    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "express-flash": "git://github.com/RGBboy/express-flash.git",
-    "express-session": "^1.17.1",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.11"
   },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+  "dependencies": {
+    "mongo": "^0.1.0"
   },
   "author": "",
-  "license": "ISC"
+ "license": "ISC"
 }
